--- a/tabse/app/src/main/AndroidManifest.xml
+++ b/tabse/app/src/main/AndroidManifest.xml
@@ -23,5 +23,14 @@
         <activity android:name=".Main2Activity" />
         <activity android:name="AlbumActivity" />
         <activity android:name="GalleryPreview" />
+        <provider
+        android:name="android.support.v4.content.FileProvider"
+        android:authorities="com.example.q.tabse"
+        android:exported="false"
+        android:grantUriPermissions="true">
+        <meta-data
+            android:name="android.support.FILE_PROVIDER_PATHS"
+            android:resource="@xml/file_path" />
+    </provider>
     </application>
 </manifest>
